<!--
  ~ Copyright 2018 cxx
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">mvp</string>
    <string name="thumbnail">thumbnail</string>
    <string name="demo">Demo</string>
    <string name="picture">picture</string>
    <string name="netbird_vangogh_rvadapter">NetBird VanGogh RvAdapter</string>
    <string name="request_permissions">request permissions</string>
    <string name="pick_image">pick image</string>

    <string name="single_mode">Single Mode</string>
    <string name="multiple_mode">Multiple Mode</string>
    <string name="none">None</string>
    <string name="flip_view_vangogh">FlipView VanGogh</string>
    <string name="tip_network_error">network error</string>
    <string name="click_to_retry">click to retry</string>
    <string name="custom_multi_wheel_view">MutliWheelView Custom Adapter</string>
    <string name="simple_multi_wheel_view">MultiWheelView Simple</string>
    <string name="tip_load_data_failed">load data failed</string>
    <string name="kingfisher_vangogh_rvadapter">KingFisher VanGogh RvAdapter</string>
</resources>
