<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 cxx
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/picture"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_indicator" />

    <Button
        android:id="@+id/btn_show_courses"
        style="@style/ButtonLauncher"
        android:text="@string/netbird_vangogh_rvadapter" />

    <Button
        android:id="@+id/btn_show_repos"
        style="@style/ButtonLauncher"
        android:text="@string/kingfisher_vangogh_rvadapter" />

    <Button
        android:id="@+id/btn_show_flipper"
        style="@style/ButtonLauncher"
        android:text="@string/flip_view_vangogh" />

    <Button
        android:id="@+id/btn_show_time"
        style="@style/ButtonLauncher"
        android:text="@string/custom_multi_wheel_view" />

    <Button
        android:id="@+id/btn_show_region"
        style="@style/ButtonLauncher"
        android:text="@string/simple_multi_wheel_view" />

    <Button
        android:id="@+id/btn_request_permission"
        style="@style/ButtonLauncher"
        android:text="@string/request_permissions" />

    <Button
        android:id="@+id/btn_pick_image"
        style="@style/ButtonLauncher"
        android:text="@string/pick_image" />

</LinearLayout>